Add OpenGraph tags

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,7 +34,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Flowspace</title>
+
+    <title>flowspace</title>
+
+    <!-- opengraph -->
+    <meta property="og:title" content="flowspace" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://flowspace.breq.dev" />
+    <meta property="og:image" content="%PUBLIC_URL%/opengraph.png" />
+    <meta property="og:description" content="a social network for ideas and conversations to flow." />
+    <meta property="og:site_name" content="flowspace" />
+    <meta property="og:locale" content="en_US" />
   </head>
   <body>
     <noscript>you need to enable javascript to run this app.</noscript>
